frontend-deploy.yaml
apiVersion: v1
kind: Service
metadata:
  name: inventory-frontend-service
spec:
  type: ClusterIP
  selector:
    app: inventory-frontend
  ports:
    - port: 3000
      targetPort: 3000

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventory-frontend-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: inventory-frontend
  template:
    metadata:
      labels:
        app: inventory-frontend
    spec:
      containers:
        - name: frontend-app
          image: inventory-frontend-app:2
          imagePullPolicy: Never
          ports:
            - containerPort: 3000
